# company-application-classification

./: .gitignore  .infisical.json  Dockerfile  main.py  pyproject.toml  retrain_model.py
src/: main.py
src/best_model/: best_model.pkl
src/ml/: company-behavior-shm  company-behavior-wal  discovery.ipynb  hello.db-info  hello.db-shm  hello.db-wal
src/routes/health_check/: main.py
src/routes/predict_interview/: main.py
src/utils/classes/: __init__.py  main.py
src/utils/functions/: __init__.py  main.py
src/utils/sql/: embedding_request.sql
