[project]
name = "company-application-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "dotenv>=0.9.9",
    "imblearn>=0.0",
    "libsql>=0.1.2",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]
