[project]
name = "company-application-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "gunicorn>=23.0.0",
    "imbalanced-learn==0.11.0",
    "imblearn>=0.0",
    "libsql>=0.1.2",
    "libsql-client>=0.3.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "scikit-learn==1.5.2",
]
